# statsig-mcp-stats

./: .gitignore  COWORKER_SETUP.md  DEPENDENCY_ANALYSIS.md  Dockerfile  HOSTING.md  LICENSE  README.md  README_EXTENDED.md  docker-compose.yml  env.example  example_results_usage.py  pyproject.toml  railway.json  validate.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
docs/: CODEBASE_STRUCTURE.md
examples/: client_example.py
statsig_mcp/: __init__.py  __main__.py  console_client.py  server.py  statsig_client.py  types.py
tests/: __init__.py  test_server.py
