[project]
name = "statsig-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Statsig client SDK"
authors = [
    {name = "Statsig MCP", email = "support@statsig.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "statsig-python-core>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/statsig-mcp"
Documentation = "https://docs.statsig.com"
Repository = "https://github.com/your-org/statsig-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
statsig-mcp = "statsig_mcp.server:main" 