[project]
name = "statsig-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Statsig Console API management"
authors = [
    {name = "Ge Li", email = "geli2001@berkeley.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "statsig", "feature-flags", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.6.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/GeLi2001/statsig-mcp"
Documentation = "https://github.com/GeLi2001/statsig-mcp#readme"
Repository = "https://github.com/GeLi2001/statsig-mcp"
Issues = "https://github.com/GeLi2001/statsig-mcp/issues"
Changelog = "https://github.com/GeLi2001/statsig-mcp/releases"

[project.scripts]
statsig-mcp = "statsig_mcp.server:main_sync"

[tool.hatch.envs.lint]
dependencies = ["ruff>=0.6.0"]

[tool.hatch.envs.lint.scripts]
check = "ruff check {args:statsig_mcp}"
format = "ruff format {args:statsig_mcp}" 
lint = ["check", "format"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statsig_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/statsig_mcp",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache", 
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["statsig_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
] 

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "twine>=6.1.0",
]
